--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <title>Kérdőív</title>
 <p> Mi a League of Legends első karaktere ABC sorrendben? </p>
+<input type="text" id="valastEgy">
 
 
 </head>
