--- a/index.html
+++ b/index.html
@@ -13,8 +13,15 @@
 <input type="text" id="valastEgy">
 <input type="submit" value="Submit">
 </form>
-
 <p id="ide_irj"></p>
+<br>
+<br>
+<form onsubmit="return(masodikValasz())">
+<p>Melyik karakternek a végső képessége képes egy halat kilőni?</p>
+<input type="text" id="valaszKetto">
+<input type="submit" value="Ellenőrzés">
+</form>
+<p id="ValaszMegjelenites"></p>
 </body>
 <script src="script.js"></script>
 </html>
