valasz3 plusz kerdes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,6 +22,14 @@
 <input type="submit" value="Ellenőrzés">
 </form>
 <p id="ValaszMegjelenites"></p>
+<br>
+<br>
+<form onsubmit="return(harmadikvalasz())">
+<p>Melyik a meta legerősebb junglerese? </p>
+<input type="text" id="valastHarom">
+<input type="submit" value="Submit">
+</form>
+<p id="valasz3"></p>
 </body>
 <script src="script.js"></script>
 </html>
