--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <p id="ide_irj"></p>
 <br>
 <br>
-<form onsubmit="return(masodikValasz())">
+<form onsubmit="return(masodikvalasz())">
 <p>Melyik karakternek a végső képessége képes egy halat kilőni?</p>
 <input type="text" id="valaszKetto">
 <input type="submit" value="Ellenőrzés">
