--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
 <input type="submit" value="Submit">
 </form>
 <p id="valasz3"></p>
+<br>
+<br>
+<form onsubmit="return(negyedikvalasz())">
+<p>Melyik a meta legerősebb assassinja? </p>
+<input type="text" id="valaszNegy">
+<input type="submit" value="Ellenőrzés">
+</form>
+<p id="ValaszMegjelenites4"></p>
 </body>
 <script src="script.js"></script>
 </html>
