otodik keres es valasz

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <form onsubmit="return(elsovalasz())">
 <p> Mi a League of Legends első karaktere ABC sorrendben? </p>
 <input type="text" id="valastEgy">
-<input type="submit" value="Submit">
+<input type="submit" value="Ellenőrzés">
 </form>
 <p id="ide_irj"></p>
 <br>
@@ -27,7 +27,7 @@
 <form onsubmit="return(harmadikvalasz())">
 <p>Melyik a meta legerősebb junglerese? </p>
 <input type="text" id="valastHarom">
-<input type="submit" value="Submit">
+<input type="submit" value="Ellenőrzés">
 </form>
 <p id="valasz3"></p>
 <br>
@@ -38,6 +38,14 @@
 <input type="submit" value="Ellenőrzés">
 </form>
 <p id="ValaszMegjelenites4"></p>
+<br>
+<br>
+<form onsubmit="return(otodikvalasz())">
+<p>Melyik champ ultivála lehet stackrlni a nagyságot? </p>
+<input type="text" id="valastOt">
+<input type="submit" value="Ellenőrzés">
+</form>
+<p id="ValaszMegjelenites5"></p>
 </body>
 <script src="script.js"></script>
 </html>
