--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
 <input type="submit" value="Ellenőrzés">
 </form>
 <p id="ValaszMegjelenites5"></p>
+<br>
+<br>
+<form onsubmit="return(hatodikvalasz())">
+<p>Melyik a legerősebb ADC a mostani patchben? </p>
+<input type="text" id="valaszHat">
+<input type="submit" value="Ellenőrzés">
+</form>
+<p id="ValaszMegjelenites6"></p>
 </body>
 <script src="script.js"></script>
 </html>
