--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title>Kérdőív</title>
 </head>
 <body>
+    <h1>League of Legends Kvízjáték</h1>
 <form onsubmit="return(elsovalasz())">
-<p> Mi a League of Legends első karaktere ABC sorrendben? </p>
+<p> <h3>Mi a League of Legends első karaktere ABC sorrendben?</h3></p>
 <input type="text" id="valastEgy">
 <input type="submit" value="Ellenőrzés">
 </form>
@@ -17,7 +18,7 @@
 <br>
 <br>
 <form onsubmit="return(masodikvalasz())">
-<p>Melyik karakternek a végső képessége képes egy halat kilőni?</p>
+<p><h3>Melyik karakternek a végső képessége képes egy halat kilőni?</h3></p>
 <input type="text" id="valaszKetto">
 <input type="submit" value="Ellenőrzés">
 </form>
@@ -25,7 +26,7 @@
 <br>
 <br>
 <form onsubmit="return(harmadikvalasz())">
-<p>Melyik a meta legerősebb junglerese? </p>
+<p><h3>Melyik a meta legerősebb junglerese?</h3> </p>
 <input type="text" id="valastHarom">
 <input type="submit" value="Ellenőrzés">
 </form>
@@ -33,7 +34,7 @@
 <br>
 <br>
 <form onsubmit="return(negyedikvalasz())">
-<p>Melyik a meta legerősebb assassinja? </p>
+<p><h3>Melyik a meta legerősebb assassinja? </h3></p>
 <input type="text" id="valaszNegy">
 <input type="submit" value="Ellenőrzés">
 </form>
@@ -41,7 +42,7 @@
 <br>
 <br>
 <form onsubmit="return(otodikvalasz())">
-<p>Melyik champ ultivála lehet stackrlni a nagyságot? </p>
+<p><h3>Melyik champ ultivála lehet stackrlni a nagyságot? </h3></p>
 <input type="text" id="valastOt">
 <input type="submit" value="Ellenőrzés">
 </form>
@@ -49,7 +50,7 @@
 <br>
 <br>
 <form onsubmit="return(hatodikvalasz())">
-<p>Melyik a legerősebb ADC a mostani patchben? </p>
+<p><h3>Melyik a legerősebb ADC a mostani patchben?</h3> </p>
 <input type="text" id="valaszHat">
 <input type="submit" value="Ellenőrzés">
 </form>
